--- a/manifest.json
+++ b/manifest.json
@@ -5,11 +5,11 @@
   "version_name": "paperclip",
   "description": "Manage tabs in Google Chrome",
   "icons": {
-    "32": "img/icon32.png"
+    "32": "img/crappyClippy_32x32.png"
   },
   "browser_action": {
     "default_icon": {
-      "32": "img/icon32.png"
+      "32": "img/crappyClippy_32x32.png"
     },
     "default_title": "Tab Buddy",
     "default_popup": "popup.html"
