--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,11 @@
   },
   "browser_action": {
     "default_icon": {
-      "32": "img/crappyClippy_32x32.png"
+      "32": "img/crappyClippy_32x32.png",
+      "64": "img/crappyClippy_64x64.png",
+      "128": "img/crappyClippy_128x128.png",
+      "256": "img/crappyClippy_256x256.png",
+      "512": "img/crappyClippy_512x512.png"
     },
     "default_title": "Tab Buddy",
     "default_popup": "popup.html"
