Sort tabs by time updated

--- a/manifest.json
+++ b/manifest.json
@@ -41,15 +41,7 @@
     "index.html",
     "popup.html"
   ],
-  "content_scripts": [
-    {
-      "matches": [
-        "http://*/*",
-        "https://*/*"
-      ],
-      "js": [
-        "js/save.js"
-      ]
-    }
-  ]
+  "background": {
+    "scripts": ["js/background.js"]
+  }
 }
