Added some useless CPU info to home

--- a/manifest.json
+++ b/manifest.json
@@ -28,6 +28,7 @@
     "debugger",
     "management",
     "notifications",
+    "processes",
     "storage",
     "system.cpu",
     "system.memory",
